tests/semantic/valid/33_e_attr_init_ok.hulk
type Person(x: Number, name: String) {
    x_attr: Number = x;
    name_attr: String = name;
}
