tests/semantic/invalid/32_e_redefined_class.hulk
type Point(x:Number) { x:Number = x; }

type Point(y:Number) { y:Number = y; }
